Cleaning mess so "mvn clean package" runs again on project level! next: - Run with tests - Remove .iml files from commits - Remove webpack.generated.js from commits